# Traj-LO

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  package.xml
data/: config_hesai.yaml  config_livox.yaml  config_ntu.yaml  config_ouster.yaml  config_pointlio.yaml  config_velodyne.yaml
include/trajlo/core/: map_manager.h  odometry.h
include/trajlo/io/: data_loader.h  rosbag_hesai.h  rosbag_livox.h  rosbag_ouster.h  rosbag_velodyne.h
include/trajlo/utils/: common_type.h  config.h  pose_type.h
src/: run_trajlo.cpp
src/scripts/: install_deps_ubuntu.sh
src/src/core/: map_manager.cpp  odometry.cpp
src/src/io/: data_loader.cpp
src/src/utils/: config.cpp
